<resources>
    <string name="app_name">Pl First Challenge</string>
    <string name="about_alc">About Alc</string>
    <string name="my_profile">My Profile</string>
    <string name="welcome"> Welcome to Alc 4.0</string>
    <string name="activity_c">Activity c</string>
    <string name="my_name">Nelly Saeed</string>
    <string name="track">Track:</string>
    <string name="android">Android</string>
    <string name="country">Country:</string>
    <string name="egypt">Egypt</string>
    <string name="email">E-mail:</string>
    <string name="email_info">nellySaeed@gmail.com</string>
    <string name="phone">Phone Number:</string>
    <string name="phone_number">+201002451548</string>
    <string name="slack_user">Slack Username:</string>
    <string name="slack_user_name">\@Nelly</string>












</resources>
